2.0.2 z-index fixes on dialog and dropdowns

--- a/src/_common.scss
+++ b/src/_common.scss
@@ -17,3 +17,6 @@ $border-radius: 3px;
 $menu-bar-height: 1em + $margin * 4 + .1em;
 $warning-background-color: #b40000;
 $max-width: 80ch;
+$dropdown-z-index: 22;
+$dialog-z-index: 20;
+$menu-bar-z-index: 21;
